cambio espacio titulo vivi nerdearla

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
     <!-- seccion Vivi Nerdearla -->
     <tr style>
-      <td style="margin-top: 4em;">
-        <h2>Viví Nerdearla</h2>
+      <td>
+        <h2 style="margin-top: 50px;">Viví Nerdearla</h2>
       </td>
     </tr>
     <tr>
