--- a/index.html
+++ b/index.html
@@ -57,46 +57,41 @@
         </table>
       </td>
     </tr>
-    <tr style="width: 100%; height: 400px; background-image: url(https://res.cloudinary.com/dhjoeubqp/image/upload/v1693689739/DDW/pexels-isaac-taylor-2305084_rhfaus.jpg); background-repeat: no-repeat; background-size: cover;">
+    <tr
+      style="width: 100%; height: 400px; background-image: url(https://res.cloudinary.com/dhjoeubqp/image/upload/v1693689739/DDW/pexels-isaac-taylor-2305084_rhfaus.jpg); background-repeat: no-repeat; background-size: cover;">
       <td style="display: inline-block;">
         <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693678844/DDW/nerdearla-simple_yiwnec.png"
           alt="Logo de Nerdearla" style="width: 645px; height: auto" />
       </td>
-      <td style="display: inline-block;">
-        <p style="color: #fff;">
-          <span>17 a 19 de octubre</span>
-          <span>Charlas educativas,</span>
-          <span>dedicadas a la tecnología.</span>
-        </p>
+      <td style="display: block; text-align: right; padding-right: 20px;">
+        <p style="color: #fff; font-size: 22px; font-weight: bold;">17 a 19 de octubre</p>
+      </td>
+      <td style="display: block; text-align: right; padding-right: 20px;">
+        <p style="color: #fff; font-size: 14px">Charlas educativas, <br> dedicadas a la tecnología.</p>
+      </td>
+      <td style="display: block; text-align: right; padding-right: 20px;">
+        <img src="https://cdn.boletius.com/images/1634853547547-logo.png" alt="Logo de Konex"
+          style="width: 100px; height: auto" />
       </td>
     </tr>
 
     <!--ANDRES METRICAS  -->
     <tr style="display: inline-block; width: 100%; height: 150px; background-color: #f0a900">
       <td style="display: inline-block;margin-top: 10px;">
-        <img
-          src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/web_3059484_atf87f.png"
-          alt="icono mundo"
-          style="max-width: 50px; width: 100%; margin: 0;"
-        />
+        <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/web_3059484_atf87f.png"
+          alt="icono mundo" style="max-width: 50px; width: 100%; margin: 0;" />
         <h2 style="margin: 5px 0 0 5px;">20+</h2>
         <p style="margin-top: 5px;">Países Alcanzados</p>
       </td>
       <td style="display: inline-block;margin: 10px 30px 0 30px;">
-        <img
-          src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/people_2118701_crbqdo.png"
-          alt="icono mundo"
-          style="max-width: 50px; width: 100%; margin: 0;"
-        />
+        <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/people_2118701_crbqdo.png"
+          alt="icono mundo" style="max-width: 50px; width: 100%; margin: 0;" />
         <h2 style="margin: 5px 0 0 ;">100</h2>
         <p style="margin-top: 5px;">Países Alcanzados</p>
       </td>
       <td style="display: inline-block;margin-top: 10px;">
-        <img
-          src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/clock_3936550_dxahvm.png"
-          alt="icono mundo"
-          style="max-width: 50px; width: 100%; margin: 0;"
-        />
+        <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/clock_3936550_dxahvm.png"
+          alt="icono mundo" style="max-width: 50px; width: 100%; margin: 0;" />
         <h2 style="margin: 5px 0 0 0;">500+</h2>
         <p style="margin-top: 5px;">Horas de Conferencia</p>
       </td>
@@ -131,8 +126,7 @@
                   background-color: #f0a900;
                   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
                   cursor: pointer;
-                  "
-                  href="#">
+                  " href="#">
                 ¡Regístrate ya!
               </button>
             </td>
@@ -146,8 +140,7 @@
                   background-color: #f0a900;
                   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
                   cursor: pointer;
-                "
-                href="#">
+                " href="#">
                 Más información
               </button>
             </td>
@@ -161,26 +154,38 @@
 
     <tr style="background-color: #282828; width: 100%; height: 350px;">
       <td style="display: inline-block; height: inherit; width: 42%; padding: 0px 0px 0px 6px;">
-        <a style="display: inline-block; border-radius: 50%; margin: 15px 0px;" href="https://www.google.com/maps/place/Ciudad+Cultural+Konex/@-34.6065695,-58.4105342,15z/data=!4m2!3m1!1s0x0:0x6dd823092cb367d9?sa=X&ved=2ahUKEwjiuq__gZSBAxUpppUCHVJGApAQ_BJ6BAhFEAA&ved=2ahUKEwjiuq__gZSBAxUpppUCHVJGApAQ_BJ6BAhXEAg" target="_blank">
-          <img style="width: 270px; border-radius: 50%;" src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693684489/DDW/maps-konex_ybfq4o.png" alt="Ubicacion Konex">
+        <a style="display: inline-block; border-radius: 50%; margin: 15px 0px;"
+          href="https://www.google.com/maps/place/Ciudad+Cultural+Konex/@-34.6065695,-58.4105342,15z/data=!4m2!3m1!1s0x0:0x6dd823092cb367d9?sa=X&ved=2ahUKEwjiuq__gZSBAxUpppUCHVJGApAQ_BJ6BAhFEAA&ved=2ahUKEwjiuq__gZSBAxUpppUCHVJGApAQ_BJ6BAhXEAg"
+          target="_blank">
+          <img style="width: 270px; border-radius: 50%;"
+            src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693684489/DDW/maps-konex_ybfq4o.png"
+            alt="Ubicacion Konex">
         </a>
         <div style="display: inline-block;">
-          <img style="display: inline; width: 35px; height: 31px;" src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693684505/DDW/icono-ubicacion_ai8rxn.png" alt="Icono_ubicacion">
+          <img style="display: inline; width: 35px; height: 31px;"
+            src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693684505/DDW/icono-ubicacion_ai8rxn.png"
+            alt="Icono_ubicacion">
           <p style="display: inline-block; font-size: 12px; color: #fff; font-weight: 300; margin-left: 10px;">
             <span style="display: block;">SARMIENTO 3131 [C1196AAG]</span>
             <span style="display: block;">BUENOS AIRES, ARGENTINA</span>
           </p>
         </div>
       </td>
-      <td style="display: inline-block; height: inherit; width: 50%; vertical-align: top; color: #fff; text-align: end; padding: 0px 7px 0px 0px;">
+      <td
+        style="display: inline-block; height: inherit; width: 50%; vertical-align: top; color: #fff; text-align: end; padding: 0px 7px 0px 0px;">
         <h2 style="margin: 28px 0px;">INFORMACIÓN DEL PRÓXIMO EVENTO</h2>
-        <p style="margin: 28px 0px; font-size: 16px; line-height: 1.3;">El próximo evento tendrá lugar en Ciudad Cultural Konex, el espacio situado en el mítico barrio del Abasto de la ciudad de Buenos Aires.</p>
-        <button style="padding: 25px; margin: 28px 0px; color: #000; font-size: 16px; font-weight: bold; border: none; border-radius: 5px; background-color: #ffffff; cursor: pointer; box-shadow: rgba(233, 233, 233, 0.2) 0px 7px 29px 0px;" href="#">Compra tus entradas</button>
+        <p style="margin: 28px 0px; font-size: 16px; line-height: 1.3;">El próximo evento tendrá lugar en Ciudad
+          Cultural Konex, el espacio situado en el mítico barrio del Abasto de la ciudad de Buenos Aires.</p>
+        <button
+          style="padding: 25px; margin: 28px 0px; color: #000; font-size: 16px; font-weight: bold; border: none; border-radius: 5px; background-color: #ffffff; cursor: pointer; box-shadow: rgba(233, 233, 233, 0.2) 0px 7px 29px 0px;"
+          href="#">Compra tus entradas</button>
       </td>
     </tr>
     <tr>
       <td>
-        <img style="width: 100%;" src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693683514/DDW/imagen-konex_j1mgti.png" alt="Banner de Konex">
+        <img style="width: 100%;"
+          src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693683514/DDW/imagen-konex_j1mgti.png"
+          alt="Banner de Konex">
       </td>
     </tr>
 
@@ -226,8 +231,67 @@
       </td>
     </tr>
 
+    <!-- seccion auspician -->
 
-    <!-- seccion footer -->
+    <tr style="width: 100%; height: 145px; background-image: url(https://res.cloudinary.com/dhjoeubqp/image/upload/v1693689739/DDW/pexels-isaac-taylor-2305084_rhfaus.jpg); background-repeat: no-repeat; background-size: cover;">
+      <td style="display: inline-block; width: 90%; height: 120px; background-color: #f0a900; margin-top: 12px;">
+        <table style="background-color: #f0a900;">
+          <tr><h4>Auspician</h4></tr>
+          <tr>
+            <td style="display: inline-block; padding: 0 5%;">
+              <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/web_3059484_atf87f.png"
+                alt="icono mundo" style="max-width: 40px; " />
+            </td>
+            <td style="display: inline-block; padding: 0 5%;">
+              <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/web_3059484_atf87f.png"
+                alt="icono mundo" style="max-width: 40px;" />
+            </td>
+            <td style="display: inline-block; padding: 0 5%;">
+              <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/web_3059484_atf87f.png"
+                alt="icono mundo" style="max-width: 40px;" />
+            </td>
+            <td style="display: inline-block; padding: 0 5%;">
+              <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/web_3059484_atf87f.png"
+                alt="icono mundo" style="max-width: 40px;" />
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+
+    <!-- seccion redes -->
+
+    <tr style="width: 100%; height: 100px; background-image: url(https://res.cloudinary.com/dhjoeubqp/image/upload/v1693689739/DDW/pexels-isaac-taylor-2305084_rhfaus.jpg); background-repeat: no-repeat; background-size: cover;">
+      <td style="text-align: left; display: inline-block; padding-right: 15%; margin-top: 25px;">
+        <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693678844/DDW/nerdearla-simple_yiwnec.png"
+          alt="Logo de Nerdearla" style="width: 200px; height: auto;" />
+      </td>
+      <td style="text-align: left; display: inline-block; padding-left: 15%; margin-top: 25px;">
+        <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693678844/DDW/nerdearla-simple_yiwnec.png"
+          alt="Logo de Nerdearla" style="width: 200px; height: auto;" />
+      </td>
+    </tr>
+    <tr style="background-color: #000;">
+      <td>
+        <p style="color: #fff; font-size: 11px; text-align: center; margin: 20px">
+          Gracias por suscribirse a nuestro newsletter. El equipo de Nerdeados trabajará arduamente para ofrecerle una buena calidad de información en base a sus preferencias. Sin embargo, si decides no recibir más mails de nosotros, siéntete libre de hacer click en el link que se encuentra debajo. 
+        </p>
+      </td>
+    </tr>
+
+    <!-- seccion cierre -->
+
+    <tr>
+      <table style="background-color: #000;">
+        <tr style="display: inline-block;">
+          <td style="padding: 0 15px;">
+            <a href="http://" target="_blank" rel="noopener noreferrer;">Darse de baja</a>
+          </td>
+          <td style="padding: 0 15px;">
+            <a href="http://" target="_blank" rel="noopener noreferrer">Ver en el Navegador</a>
+          </td>
+        </tr>
+      </table>
+    </tr>
 </body>
-
 </html>
