cambio a las secciones para que sea responsive, falta modificar la seccion del mapa

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       style="width: 100%; height: 400px; background-image: url(https://res.cloudinary.com/dhjoeubqp/image/upload/v1693689739/DDW/pexels-isaac-taylor-2305084_rhfaus.jpg); background-repeat: no-repeat; background-size: cover;">
       <td style="display: inline-block;">
         <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693678844/DDW/nerdearla-simple_yiwnec.png"
-          alt="Logo de Nerdearla" style="width: 645px; height: auto" />
+          alt="Logo de Nerdearla" style="max-width: 645px; width: 100%; height: auto" />
       </td>
       <td style="display: block; text-align: right; padding-right: 20px;">
         <p style="color: #fff; font-size: 22px; font-weight: bold;">17 a 19 de octubre</p>
@@ -76,20 +76,20 @@
     </tr>
 
     <!--ANDRES METRICAS  -->
-    <tr style="display: inline-block; width: 100%; height: 150px; background-color: #f0a900">
-      <td style="display: inline-block;margin-top: 10px;">
+    <tr style="display: inline-block; width: 100%; height: 100%; background-color: #f0a900">
+      <td style="display: inline-block; margin-top: 10px;">
         <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/web_3059484_atf87f.png"
           alt="icono mundo" style="max-width: 50px; width: 100%; margin: 0;" />
         <h2 style="margin: 5px 0 0 5px;">20+</h2>
         <p style="margin-top: 5px;">Países Alcanzados</p>
       </td>
-      <td style="display: inline-block;margin: 10px 30px 0 30px;">
+      <td style="display: inline-block; margin: 10px 30px 0 30px;">
         <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/people_2118701_crbqdo.png"
           alt="icono mundo" style="max-width: 50px; width: 100%; margin: 0;" />
         <h2 style="margin: 5px 0 0 ;">100</h2>
         <p style="margin-top: 5px;">Países Alcanzados</p>
       </td>
-      <td style="display: inline-block;margin-top: 10px;">
+      <td style="display: inline-block; margin-top: 10px;">
         <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693694124/DDW/clock_3936550_dxahvm.png"
           alt="icono mundo" style="max-width: 50px; width: 100%; margin: 0;" />
         <h2 style="margin: 5px 0 0 0;">500+</h2>
@@ -113,10 +113,10 @@
       </td>
     </tr>
     <tr>
-      <td style="text-align: center;">
+      <td style="text-align: center; height: auto;">
         <table style="margin: 0 0 65px 0;">
           <tr>
-            <td style="padding-right: 15px;">
+            <td style="padding: 30px; display: inline-block;">
               <button style="
                   font-weight: bold;
                   font-size: 16px;
@@ -130,7 +130,7 @@
                 ¡Regístrate ya!
               </button>
             </td>
-            <td style="padding-left: 15px;">
+            <td style="padding: 30px; display: inline-block;">
               <button style="
                   font-weight: bold;
                   font-size: 16px;
@@ -152,7 +152,7 @@
 
     <!-- SECCION MAPA -->
 
-    <tr style="background-color: #282828; width: 100%; height: 350px;">
+    <tr style="background-color: #282828; width: 100%; min-height: 350px;">
       <td style="display: inline-block; height: inherit; width: 42%; padding: 0px 0px 0px 6px;">
         <a style="display: inline-block; border-radius: 50%; margin: 15px 0px;"
           href="https://www.google.com/maps/place/Ciudad+Cultural+Konex/@-34.6065695,-58.4105342,15z/data=!4m2!3m1!1s0x0:0x6dd823092cb367d9?sa=X&ved=2ahUKEwjiuq__gZSBAxUpppUCHVJGApAQ_BJ6BAhFEAA&ved=2ahUKEwjiuq__gZSBAxUpppUCHVJGApAQ_BJ6BAhXEAg"
@@ -233,8 +233,8 @@
 
     <!-- seccion auspician -->
 
-    <tr style="width: 100%; height: 145px; background-image: url(https://papercallio-production.s3.amazonaws.com/uploads/event/logo/5207/nerdearla-fondoZOOM5.png); background-repeat: no-repeat; background-size: cover;">
-      <td style="display: inline-block; width: 90%; height: 120px; background-color: #f0a900; margin-top: 12px;">
+    <tr style="width: 100%; min-height: 145px; background-image: url(https://papercallio-production.s3.amazonaws.com/uploads/event/logo/5207/nerdearla-fondoZOOM5.png); background-blend-mode: multiply; background-repeat: no-repeat; background-size: cover;">
+      <td style="display: inline-block; width: 90%; min-height: 120px; background-color: #f0a900; margin: 12px 0;">
         <table style="background-color: #f0a900;">
           <tr><h4>Auspician</h4></tr>
           <tr>
@@ -264,11 +264,11 @@
     <tr style="width: 100%; height: 100px; background-image: url(https://res.cloudinary.com/dhjoeubqp/image/upload/v1693683514/DDW/imagen-konex_j1mgti.png); background-repeat: no-repeat; background-size: cover;">
       <td style="text-align: left; display: inline-block; padding-right: 15%; margin-top: 25px;">
         <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693678844/DDW/nerdearla-simple_yiwnec.png"
-          alt="Logo de Nerdearla" style="width: 200px; height: auto;" />
+          alt="Logo de Nerdearla" style="max-width: 200px; height: auto;" />
       </td>
       <td style="text-align: left; display: inline-block; padding-left: 15%; margin-top: 25px;">
         <img src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1693678844/DDW/nerdearla-simple_yiwnec.png"
-          alt="Logo de Nerdearla" style="width: 200px; height: auto;" />
+          alt="Logo de Nerdearla" style="max-width: 200px; height: auto;" />
       </td>
     </tr>
     <tr style="background-color: #000;">
@@ -277,17 +277,12 @@
           Gracias por suscribirse a nuestro newsletter. El equipo de Nerdeados trabajará arduamente para ofrecerle una buena calidad de información en base a sus preferencias. Sin embargo, si decides no recibir más mails de nosotros, siéntete libre de hacer click en el link que se encuentra debajo. 
         </p>
       </td>
-    </tr>
-
-    <!-- seccion cierre -->
-
-    <tr>
-      <table style="background-color: #000;">
-        <tr style="display: inline-block;">
-          <td style="padding: 0 15px;">
+      <table style="background-color: #000; width: 100%;">
+        <tr style="width: 100%;">
+          <td style="padding: 0 15px; display: inline-block;">
             <a href="http://" target="_blank" rel="noopener noreferrer;">Darse de baja</a>
           </td>
-          <td style="padding: 0 15px;">
+          <td style="padding: 0 15px; display: inline-block;">
             <a href="http://" target="_blank" rel="noopener noreferrer">Ver en el Navegador</a>
           </td>
         </tr>
