agregue links absolutos en el logo N de arriba, y algunos botones de abajo

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </style>
 
   <body>
-    <table style="background-color: #fcfcfc">
+    <table style="background-color: #f8f8f8">
       <tr style="background-color: #000">
         <td style="display: block">
           <table style="background-color: #000">
@@ -85,11 +85,13 @@
                   padding-left: 20px;
                 "
               >
-                <img
-                  src="https://res.cloudinary.com/dhjoeubqp/image/upload/c_thumb,w_200,g_face/v1693678850/DDW/ab6761610000e5ebc68b8bc018158d66fd489877_dz8udu.jpg"
-                  alt="logo de nerdearla"
-                  style="width: 51px; height: 51px"
-                />
+                <a href="https://nerdear.la/es/" target="_blank" rel="noopener noreferrer">
+                  <img
+                    src="https://res.cloudinary.com/dhjoeubqp/image/upload/c_thumb,w_200,g_face/v1693678850/DDW/ab6761610000e5ebc68b8bc018158d66fd489877_dz8udu.jpg"
+                    alt="logo de nerdearla"
+                    style="width: 51px; height: 51px"
+                  />
+                </a>
               </td>
               <td style="width: 33%; text-align: right; padding-right: 20px">
                 <p style="color: #fff; font-size: 14px">
@@ -192,7 +194,7 @@
       </tr>
       <tr>
         <td style="text-align: center; height: auto">
-          <table style="margin: 0 0 25px 0; background-color: #fdfdfd">
+          <table style="margin: 0 0 25px 0; background-color: #f8f8f8">
             <tr>
               <td style="padding: 30px; display: inline-block">
                 <button
@@ -454,11 +456,13 @@
             padding: 25px 0px;
           "
         >
-          <img
-            src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1694088151/DDW/logo_blanco_f5s8qu.png"
-            alt="Logo de Nerdearla"
-            style="max-width: 200px; height: auto"
-          />
+          <a href="https://nerdear.la/es/" target="_blank" rel="noopener noreferrer">
+            <img
+              src="https://res.cloudinary.com/dhjoeubqp/image/upload/v1694088151/DDW/logo_blanco_f5s8qu.png"
+              alt="Logo de Nerdearla"
+              style="max-width: 200px; height: auto"
+            />
+          </a>
         </td>
         <td class="redes"
           style="
@@ -547,7 +551,8 @@
             <td style="padding: 0px 15px; display: inline-block">
               <a
                 style="font-size: small"
-                href="#"
+                href="https://nerdear.la/es/"
+                target="_blank"
                 rel="noopener noreferrer"
                 >Ver en el Navegador</a
               >
